# steam-wrapped

./: .cursorrules  .pre-commit-config.yaml  README.md  config.py  env.example  generate_image.py  main.py  pyproject.toml  test_api.py
.cursor/rules/: conventional-commits.md
.github/workflows/: ci.yaml  story.yaml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  ENV_SETUP.md  README.md
src/: __init__.py
src/models/: __init__.py  game.py
src/services/: __init__.py  image_service.py  steam_api.py
src/ui/: __init__.py  display.py
tests/: README.md  __init__.py  test_config.py  test_display.py  test_main.py  test_models.py  test_steam_api.py
