[project]
name = "steam-wrapped"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mickael Bellenger", email = "mickael.bellenger@gmail.com"}
]
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.5",
    "pre-commit>=4.2.0",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
ruff = "ruff check . --fix"
black = "black ."
all.composite = ["ruff", "black"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true


