[project]
name = "steam-wrapped"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mickael Bellenger", email = "mickael.bellenger@gmail.com"}
]
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "babel>=2.17.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.5",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
ruff = "ruff check . --fix"
black = "black ."
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src --cov-report=html --cov-report=term-missing"
all.composite = ["ruff", "black"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]


